[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "butterfly-network"
version = "0.1.0"
description = "Network analysis of the Leeds butterfly Network Dataset."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Ravneet-Rahul Sandhu Singh", email = "rahulsandhu542001@gmail.com"},
]
keywords = ["python", "data-science", "butterfly"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/RahulSandhu/butterfly-network"
Dataset = "https://zenodo.org/records/7558895"
"Network Data" = "https://snap.stanford.edu/biodata/datasets/10029/10029-SS-Butterfly.html"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
